--- a/trunk/reactos/dll/win32/iphlpapi/CMakeLists.txt
+++ b/trunk/reactos/dll/win32/iphlpapi/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(iphlpapi SHARED
     iphlpapi.rc
     ${CMAKE_CURRENT_BINARY_DIR}/iphlpapi.def)
 
-set_module_type(iphlpapi win32dll UNICODE)
+set_module_type(iphlpapi win32dll UNICODE HOTPATCHABLE)
 target_link_libraries(iphlpapi wine tdilib)
 add_importlibs(iphlpapi icmp dhcpcsvc advapi32 ws2_32 msvcrt kernel32 ntdll)
 add_pch(iphlpapi iphlpapi_private.h SOURCE)
